# Toyvox

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  Toyvox.sublime-workspace  desktop.ini  file.txt  gameutils.h  helpers.cmake
Toyvox Alpha Test/: build.xml
Toyvox Alpha Test/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Toyvox Alpha Test/src/display/: JCanvas.java
Toyvox Alpha Test/src/engineTester/: AppStart.java  Sphere.java
Toyvox Alpha Test/src/space3d/: Layout3D.java  Line3D.java  Object3D.java  VMathUtils.java  Vector.java
Toyvox Alpha Test/src/space3d/objects/: Camera.java  TransformableObject.java  VoxelModel.java  VoxelObject.java
Toyvox Engine/: Toyvox Engine.sln  Toyvox Engine.vcxproj  Toyvox Engine.vcxproj.filters  tvxcore.h
Toyvox Engine/Debug/: Toyvox Engine.ilk  vc141.idb
Toyvox Engine/Debug/Toyvox Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Toyvox Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Toyvox Engine/x64/Debug/: vc141.idb
Toyvox Engine/x64/Debug/Toyvox Engine.tlog/: Toyvox Engine.lastbuildstate
ToyvoxEngine/: CMakeLists.txt  events.h  objects.h  objectsTest.cpp  sdlTest.cpp  sdlc.cpp  sdlc.h  tester.cpp  tvxcore.h
ToyvoxEngine/tests/: CMakeLists.txt  graphics.cpp  objects.cpp
Voxels as Pixels/: build.xml
Voxels as Pixels/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Voxels as Pixels/nbproject/private/: private.properties
Voxels as Pixels/src/test/: PixelTester.java
Voxels as Pixels/src/voxel/: VoxelModel.java
include/: tvxcore.h
source/: CMakeLists.txt  components.h  events.h  objects.h  sdlc.cpp  sdlc.h
tests/: CMakeLists.txt  graphics.cpp  objects.cpp
tvxsrc/: CMakeLists.txt  any.h  components.h  display.h  events.h  game.h  iris_test.cpp  minigame.cpp  objects.h  options.h  render.h  sdldebug.h  sdltest.cpp  tester.cpp  tester.h  textures.h  tvx_default_components.h  tvx_glutil.h  tvxcore.h  tvxerror.h  tvxoptions.h  tvxutil.h  voxel_objects.h  voxels.h
tvxsrc/experimental/octrender/: CMakeLists.txt  buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  dynamics.hpp  octren.cpp  octren.hpp  player.cpp  player.hpp  testOctren.cpp  voctree.cpp  voctree.hpp
tvxsrc/experimental/octrender/assets/shaders/: cover.frag  cover.vert  debug.frag  oct.frag
tvxsrc/experimental/pbostream/: CMakeLists.txt  pbos.cpp  testPbos.cpp
tvxsrc/experimental/rasterize/: rast.cpp
tvxsrc/experimental/sdlcontext/: CMakeLists.txt  camera.cpp  camera.hpp  extern.hpp  sdlc.cpp  sdlc.hpp  shader.cpp  shader.hpp  testSdlc.cpp  texture.cpp  texture.hpp
tvxsrc/modules/: CMakeLists.txt
tvxsrc/modules/octrender/: CMakeLists.txt  buffers.hpp  octren.cpp  octren.hpp  octrenTestOctree.cpp  octrenTestRender.cpp  test.cpp  testOctren.cpp
tvxsrc/modules/octrender/assets/shaders/: cool.frag  cooler.frag  cover.vert  oct.frag  oct.vert  octMarch.frag  pbrOct.frag  randOct.frag  stoct0.frag  stoct1.frag  svo.frag  transOct.frag  wallDda.frag
tvxsrc/modules/rasterize/: CMakeLists.txt  rastTest.cpp  test.cpp
tvxsrc/modules/sdlcontext/: CMakeLists.txt  camera.cpp  camera.hpp  extern.hpp  sdlc.cpp  sdlc.hpp  sdlcTest.cpp  shader.cpp  testSdlc.cpp  testTriangle.cpp  topics.cpp  topics.hpp  triangleTest.cpp
tvxsrc/native-extensions/iris-renderer/: colour.glsl  main.frag  main.vert  vertex.glsl
